# stripe3

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
programs/stripe3/: Cargo.toml
programs/stripe3/src/: lib.rs
scripts/: init-products.mjs
server/: index.js
src/: App.jsx  Root.jsx  index.css  main.jsx
src/components/agent/: AgentConsole.jsx  AgentLog.jsx
src/components/checkout/: InvoiceCard.jsx  LifiFundingPanel.jsx  PaymentModal.jsx  PaymentRequiredPanel.jsx  ReceiptPanel.jsx  UnlockedContentModal.jsx
src/components/funding/: LiFiFundingPanel.jsx
src/components/layout/: CookieConsent.jsx  Layout.jsx  Sidebar.jsx  TopBar.jsx  WalletGate.jsx
src/components/resources/: ResourceCard.jsx  ResourceForm.jsx  ResourceIntegrationModal.jsx  TakeDownResourceModal.jsx
src/components/solana/: SolanaProvider.jsx
src/components/ui/: EmptyNotice.jsx  Logo.jsx  index.jsx
src/idl/: stripe3.json
src/lib/: data.js  gatewayClient.js  networks.js  stripe3Program.js  utils.js  x402.js
src/pages/: AgentMode.jsx  Checkout.jsx  Dashboard.jsx  Developers.jsx  Funding.jsx  Landing.jsx  Receipts.jsx  Resources.jsx
supabase/: stripe3_resources.sql
