[package]
name = "stripe3"
version = "0.1.0"
description = "Solana receipt program for x402-protected resources"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stripe3"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
